2006-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Open the amandates file after the
				 <config>/amanda-client.conf file is loaded.

2006-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c, server-src/amcheck.c,
	* server-src/driver.c, server-src/dumper.c,
	* server-src/planner.c, tape-src/output-file.c: Lint cleanup.

2006-11-20  Ian Turner <ian@zmanda.com>
	* tape-src/output-file.c: Fix a compilation error related to
	  improper type casts. Thanks to Satya Ganga for noticing this
	  problem.

2006-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Use temporary variable to scanf an OFF_T_FMT.
	* server-src/planner.c: Use temporary variable to scanf an OFF_T_FMT.

2006-11-13  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Work for estimate calcsize and
				  program "DUMP".

2006-11-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Don't ouput an warning if holdingdisk 'use'
				is set to 0.

2006-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.5.1p2 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.1p2).
	* NEWS: Update for 2.5.1p2

2006-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c (getconf_byname):
	                        Parse "DEFINE:identifer:parameter" format.
	* server-src/conffile.c (getconf_list): New function to list a DEFINE.
	* server-src/conffile.c (lookup_holdingdisk): New function.
	* server-src/conffile.h (getconf_list,
	                         lookup_holdingdisk): New prototype.
	* server-src/getconf.c: accept --list argument and
	                        "DEFINE:identifer:parameter" format.
	* man/xml-source/amgetconf.8.xml: Document.

2006-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-scsi.c: Don't remove '_' from "generic_changer".
	
2006-11-08  Jean-Louis Martineau <martineau@zmanda.com>